rs/macros/tests/ui/gprogram_fails_for_service_with_not_valid_route.stderr
error: `route` attribute requires a literal with a valid Rust identifier: unexpected token
 --> tests/ui/gprogram_fails_for_service_with_not_valid_route.rs:9:13
  |
9 |     #[route("svc1/")]
  |             ^^^^^^^
